# trader-engine

./: .gitignore  CMakeLists.txt  README.md  makefile
.github/workflows/: cmake-single-platform.yml
src/: main.cpp
tests/: sample.cpp  sample_test.cpp
